--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,6 +4,11 @@ max_players: 10
 
 game_duration_minutes: 30
 
+teleport_cooldown_seconds: 20
+freeze_cooldown_seconds: 30
+
+pages: 10
+
 server_lobby:
   world: 'world'
   x: -214.5
@@ -27,3 +32,46 @@ game_spawn:
   z: -38.5
   yaw: 0.0
   pitch: 0.0
+
+page_locations:
+  - 1973.5,12.5,-12.03125,180.0,0.0,NORTH
+  - 1982.5,18.5,7.96875,180.0,0.0,NORTH
+  - 1988.5,18.5,33.03125,0.0,0.0,SOUTH
+  - 1981.5,26.5,39.96875,180.0,0.0,NORTH
+  - 1996.5,27.5,59.96875,180.0,0.0,NORTH
+  - 1970.5,27.5,53.03125,0.0,0.0,SOUTH
+  - 1992.5,27.5,78.96875,180.0,0.0,NORTH
+  - 1979.96875,27.5,81.5,90.0,0.0,WEST
+  - 1970.5,18.5,75.03125,0.0,0.0,SOUTH
+  - 1978.96875,18.5,98.5,90.0,0.0,WEST
+  - 1966.5,18.5,90.03125,0.0,0.0,SOUTH
+  - 1943.5,19.5,96.96875,180.0,0.0,NORTH
+  - 2003.03125,18.5,94.5,270.0,0.0,EAST
+  - 2034.5,17.5,93.03125,0.0,0.0,SOUTH
+  - 2072.96875,19.5,93.5,90.0,0.0,WEST
+  - 2056.5,18.5,79.03125,0.0,0.0,SOUTH
+  - 2067.96875,14.5,53.5,90.0,0.0,WEST
+  - 2072.96875,20.5,87.5,90.0,0.0,WEST
+  - 2052.5,18.5,18.03125,0.0,0.0,SOUTH
+  - 2062.5,18.5,24.96875,180.0,0.0,NORTH
+  - 2047.5,18.5,-10.96875,0.0,0.0,SOUTH
+  - 2042.03125,18.5,-23.5,270.0,0.0,EAST
+  - 2068.5,18.5,-24.96875,0.0,0.0,SOUTH
+  - 2069.5,18.5,-36.96875,0.0,0.0,SOUTH
+  - 2040.5,18.5,-37.96875,0.0,0.0,SOUTH
+  - 2013.03125,18.5,-39.5,270.0,0.0,EAST
+  - 2030.5,17.5,-12.03125,180.0,0.0,NORTH
+  - 2025.03125,19.5,4.5,270.0,0.0,EAST
+  - 2017.96875,18.5,42.5,90.0,0.0,WEST
+  - 2013.5,19.5,23.03125,0.0,0.0,SOUTH
+  - 2013.96875,18.5,66.5,90.0,0.0,WEST
+  - 1994.03125,18.5,46.5,270.0,0.0,EAST
+  - 1976.5,18.5,58.03125,0.0,0.0,SOUTH
+  - 1972.5,18.5,53.96875,180.0,0.0,NORTH
+  - 1957.5,18.5,55.96875,180.0,0.0,NORTH
+  - 1956.96875,18.5,72.5,90.0,0.0,WEST
+  - 1944.5,18.5,52.03125,0.0,0.0,SOUTH
+  - 1942.03125,18.5,34.5,270.0,0.0,EAST
+  - 1946.96875,26.5,13.5,90.0,0.0,WEST
+  - 2006.96875,26.5,26.5,90.0,0.0,WEST
+  - 1942.03125,18.5,19.5,270.0,0.0,EAST
