--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
-games: 2
+hub_server: "hub"
 
 max_players: 12
+
+game_start_countdown: 15
+ender_release_countdown: 10
 
 game_duration_minutes: 30
 
@@ -41,44 +44,70 @@ lobby_tips:
   - "&e&lTIP: &r&aAs the Ender, try to make players look at you"
 
 page_locations:
-  - 1973.5,12.5,-12.03125,180.0,0.0,NORTH
-  - 1982.5,18.5,7.96875,180.0,0.0,NORTH
-  - 1988.5,18.5,33.03125,0.0,0.0,SOUTH
-  - 1981.5,26.5,39.96875,180.0,0.0,NORTH
-  - 1996.5,27.5,59.96875,180.0,0.0,NORTH
-  - 1970.5,27.5,53.03125,0.0,0.0,SOUTH
-  - 1992.5,27.5,78.96875,180.0,0.0,NORTH
-  - 1979.96875,27.5,81.5,90.0,0.0,WEST
-  - 1970.5,18.5,75.03125,0.0,0.0,SOUTH
-  - 1978.96875,18.5,98.5,90.0,0.0,WEST
-  - 1966.5,18.5,90.03125,0.0,0.0,SOUTH
-  - 1943.5,19.5,96.96875,180.0,0.0,NORTH
-  - 2003.03125,18.5,94.5,270.0,0.0,EAST
-  - 2034.5,17.5,93.03125,0.0,0.0,SOUTH
-  - 2072.96875,19.5,93.5,90.0,0.0,WEST
-  - 2056.5,18.5,79.03125,0.0,0.0,SOUTH
-  - 2067.96875,14.5,53.5,90.0,0.0,WEST
-  - 2072.96875,20.5,87.5,90.0,0.0,WEST
-  - 2052.5,18.5,18.03125,0.0,0.0,SOUTH
-  - 2062.5,18.5,24.96875,180.0,0.0,NORTH
-  - 2047.5,18.5,-10.96875,0.0,0.0,SOUTH
-  - 2042.03125,18.5,-23.5,270.0,0.0,EAST
-  - 2068.5,18.5,-24.96875,0.0,0.0,SOUTH
-  - 2069.5,18.5,-36.96875,0.0,0.0,SOUTH
-  - 2040.5,18.5,-37.96875,0.0,0.0,SOUTH
-  - 2013.03125,18.5,-39.5,270.0,0.0,EAST
-  - 2030.5,17.5,-12.03125,180.0,0.0,NORTH
-  - 2025.03125,19.5,4.5,270.0,0.0,EAST
-  - 2017.96875,18.5,42.5,90.0,0.0,WEST
-  - 2013.5,19.5,23.03125,0.0,0.0,SOUTH
-  - 2013.96875,18.5,66.5,90.0,0.0,WEST
-  - 1994.03125,18.5,46.5,270.0,0.0,EAST
-  - 1976.5,18.5,58.03125,0.0,0.0,SOUTH
-  - 1972.5,18.5,53.96875,180.0,0.0,NORTH
-  - 1957.5,18.5,55.96875,180.0,0.0,NORTH
-  - 1956.96875,18.5,72.5,90.0,0.0,WEST
-  - 1944.5,18.5,52.03125,0.0,0.0,SOUTH
-  - 1942.03125,18.5,34.5,270.0,0.0,EAST
-  - 1946.96875,26.5,13.5,90.0,0.0,WEST
-  - 2006.96875,26.5,26.5,90.0,0.0,WEST
-  - 1942.03125,18.5,19.5,270.0,0.0,EAST
+  - 2072.0,19.0,93.0,0.0,0.0,WEST
+  - 2054.0,19.0,98.0,0.0,0.0,NORTH
+  - 2028.0,18.0,87.0,0.0,0.0,NORTH
+  - 2006.0,18.0,92.0,0.0,0.0,EAST
+  - 1992.0,18.0,94.0,0.0,0.0,SOUTH
+  - 1978.0,18.0,98.0,0.0,0.0,WEST
+  - 1966.0,18.0,90.0,0.0,0.0,SOUTH
+  - 1946.0,18.0,98.0,0.0,0.0,NORTH
+  - 2072.0,20.0,87.0,0.0,0.0,NORTH
+  - 2056.0,18.0,83.0,0.0,0.0,EAST
+  - 2058.0,14.0,51.0,0.0,0.0,EAST
+  - 2072.0,18.0,69.0,0.0,0.0,WEST
+  - 2029.0,19.0,68.0,0.0,0.0,EAST
+  - 2017.0,18.0,69.0,0.0,0.0,EAST
+  - 2013.0,18.0,66.0,0.0,0.0,WEST
+  - 1994.0,18.0,72.0,0.0,0.0,NORTH
+  - 1974.0,21.0,86.0,0.0,0.0,NORTH
+  - 1966.0,18.0,78.0,0.0,0.0,EAST
+  - 1948.0,18.0,76.0,0.0,0.0,WEST
+  - 1956.0,18.0,70.0,0.0,0.0,WEST
+  - 1943.0,18.0,52.0,0.0,0.0,SOUTH
+  - 1977.0,18.0,58.0,0.0,0.0,SOUTH
+  - 2035.0,19.0,43.0,0.0,0.0,SOUTH
+  - 2035.0,18.0,54.0,0.0,0.0,NORTH
+  - 2018.0,18.0,44.0,0.0,0.0,WEST
+  - 2013.0,19.0,23.0,0.0,0.0,SOUTH
+  - 1994.0,18.0,47.0,0.0,0.0,EAST
+  - 1977.0,18.0,51.0,0.0,0.0,WEST
+  - 1957.0,18.0,55.0,0.0,0.0,NORTH
+  - 1964.0,18.0,46.0,0.0,0.0,SOUTH
+  - 2062.0,18.0,24.0,0.0,0.0,NORTH
+  - 2041.0,18.0,22.0,0.0,0.0,EAST
+  - 2035.0,18.0,13.0,0.0,0.0,EAST
+  - 2037.0,18.0,24.0,0.0,0.0,WEST
+  - 2025.0,19.0,4.0,0.0,0.0,EAST
+  - 1988.0,18.0,33.0,0.0,0.0,SOUTH
+  - 1957.0,18.0,39.0,0.0,0.0,NORTH
+  - 1990.0,18.0,11.0,0.0,0.0,SOUTH
+  - 1942.0,18.0,40.0,0.0,0.0,EAST
+  - 1951.0,18.0,30.0,0.0,0.0,WEST
+  - 1942.0,18.0,19.0,0.0,0.0,EAST
+  - 1945.0,21.0,12.0,0.0,0.0,SOUTH
+  - 1945.0,18.0,9.0,0.0,0.0,NORTH
+  - 2072.0,18.0,1.0,0.0,0.0,WEST
+  - 2062.0,18.0,-11.0,0.0,0.0,SOUTH
+  - 2051.0,18.0,-4.0,0.0,0.0,WEST
+  - 2045.0,18.0,-11.0,0.0,0.0,SOUTH
+  - 2042.0,18.0,-16.0,0.0,0.0,EAST
+  - 2046.0,18.0,-27.0,0.0,0.0,SOUTH
+  - 2062.0,18.0,-15.0,0.0,0.0,EAST
+  - 2068.0,18.0,-25.0,0.0,0.0,SOUTH
+  - 2030.0,17.0,-13.0,0.0,0.0,NORTH
+  - 2018.0,18.0,-21.0,0.0,0.0,EAST
+  - 2069.0,18.0,-37.0,0.0,0.0,SOUTH
+  - 2066.0,18.0,-46.0,0.0,0.0,SOUTH
+  - 2040.0,18.0,-31.0,0.0,0.0,NORTH
+  - 2045.0,18.0,-39.0,0.0,0.0,SOUTH
+  - 2023.0,18.0,-36.0,0.0,0.0,WEST
+  - 2012.0,18.0,-41.0,0.0,0.0,EAST
+  - 2006.0,26.0,20.0,0.0,0.0,WEST
+  - 1981.0,26.0,39.0,0.0,0.0,NORTH
+  - 1955.0,26.0,12.0,0.0,0.0,EAST
+  - 1949.0,26.0,11.0,0.0,0.0,WEST
+  - 1996.0,27.0,59.0,0.0,0.0,NORTH
+  - 1971.0,27.0,53.0,0.0,0.0,SOUTH
+  - 1993.0,27.0,78.0,0.0,0.0,NORTH
+  - 1975.0,27.0,72.0,0.0,0.0,SOUTH
